# comal-node_clipboard-bridge

./: .gitignore  LICENSE  README.md  __init__.py  bump_version.ps1  clipboard_watcher.py  comfy_node_publish.bat  new_node_setup.bat  nodes.py  publish_node.bat  pyproject.toml
web/: clipboard_extension.js
